<resources>
    <!-- Login -->
    <string name="app_name">Shoe Store</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="username_label">User name</string>
    <string name="username_hint">Email address</string>
    <string name="login_button">Log in</string>
    <string name="create_account_button">Create new account</string>
    <!-- Welcome -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_details">This demo app displays shoes and lets you update the list of shoes.</string>
    <string name="go_to_instructions_button">Go to instructions</string>
    <!-- Instructions -->
    <string name="instructions_title">How to use this shoe app</string>
    <string name="instructions_details">Click on a shoe in the list to edit the details for it. Click on the add button to add a new shoe.</string>
    <string name="go_to_shoe_list_button">Let\'s go!</string>
    <!-- Shoe list -->
    <string name="shoe_image_description">Picture of the shoe</string>
    <string name="add_shoe_button_description">Add shoe</string>
    <string name="logout">Log out</string>
    <!-- Details -->
    <string name="shoe_name_label">Shoe name</string>
    <string name="shoe_description_label">Shoe description</string>
    <string name="shoe_manufacturer_label">Company</string>
    <string name="shoe_size_label">Shoe size</string>
    <string name="add_shoe_title">Add shoe</string>
    <string name="edit_shoe_title">Edit shoe</string>
    <string name="save">Save</string>
    <string name="save_error_message">Error saving shoe. Please enter all details.</string>
</resources>
