<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- linear layout for simple layout with three vertically stacked children -->
    <LinearLayout
        android:id="@+id/instructions_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.InstructionsFragment"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/instructions_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <TextView
            android:id="@+id/instructions_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/instructions_details"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/go_to_shoe_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/go_to_shoe_list_button" />
    </LinearLayout>
</layout>